--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+buildscript {
+    ext {
+        nav_version = "2.5.3"
+        retrofit_version = "2.9.0"
+        moshi_version = "1.14.0"
+        coil_version = "2.3.0"
+        room_version = "2.5.1"
+    }
+    dependencies {
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+    }
+}
 
 plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
+    id 'com.android.application' version '8.0.0' apply false
+    id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
